--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "typescript": "^5.8.2",
+    "@types/node": "^20.17.24"
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
