--- a/package.json
+++ b/package.json
@@ -58,8 +58,6 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
-    "typescript": "^5.8.2",
-    "@types/node": "^20.17.24",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
@@ -70,7 +68,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.8.2",
+    "@types/node": "^20.17.24"
   },
   "engines": {
     "node": ">=18.0.0"
