--- a/package.json
+++ b/package.json
@@ -58,19 +58,18 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "typescript": "^5.0.4",
+    "@types/node": "^18.16.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.8.2",
-    "@types/node": "^20.17.24"
+    "tailwindcss": "^3.3.0"
   },
   "engines": {
     "node": ">=18.0.0"
