--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,33 @@
-name: gohighlevel-clone
-type: web_service
-env: node
-buildCommand: ./render/build.sh
-startCommand: ./render/run.sh
-healthCheckPath: /api/health
-envVars:
-  - key: NODE_ENV
-    value: production
-  - key: JWT_SECRET
-    value: render-production-jwt-secret-key
-  - key: SETUP_KEY
-    value: render-setup-key-production
-disk:
-  name: data
-  mountPath: /opt/render/project/src/data
-  sizeGB: 1
+services:
+  - type: web
+    name: crm-application
+    env: node
+    buildCommand: ./render/build.sh
+    startCommand: ./render/run.sh
+    healthCheckPath: /api/health
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: JWT_SECRET
+        generateValue: true
+      - key: JWT_EXPIRES_IN
+        value: 7d
+      - key: RUN_MIGRATIONS
+        value: true
+      - key: CREATE_ADMIN
+        value: true
+      - key: NEXT_PUBLIC_APP_URL
+        sync: false
+    disk:
+      name: data
+      mountPath: /opt/render/project/src/data
+      sizeGB: 1
+    autoDeploy: true
+    
+  - type: postgres
+    name: crm-database
+    ipAllowList: []
+    plan: free
+    
+databases:
+  - name: crm-database
