--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crm-project",
+  "name": "crm-application",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
     "lint": "next lint",
     "test": "jest",
     "migrate": "node scripts/migrate.js",
-    "migrate:create": "node scripts/create-migration.js",
     "migrate:production": "NODE_ENV=production node scripts/migrate.js",
     "create-admin": "node scripts/create-admin.js"
   },
@@ -37,6 +36,7 @@
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "nodemailer": "^6.9.9",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
@@ -56,6 +56,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.16",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.8",
