--- a/package.json
+++ b/package.json
@@ -1,9 +1,31 @@
 {
+  "name": "crm-application",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "migrate:production": "node scripts/migrate.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "pg": "^8.11.3",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
+    "date-fns": "^2.30.0",
+    "jsonwebtoken": "^9.0.2",
+    "react-chartjs-2": "^5.2.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "typescript": "^5.3.3"
   }
 }
