--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
+    "@types/pg": "^8.10.9",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/uuid": "^9.0.7",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "typescript": "^5.3.3"
