--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "node scripts/run-tests.js"
   },
   "dependencies": {
     "next": "^14.1.0",
@@ -19,10 +20,15 @@
     "date-fns": "^2.30.0",
     "jsonwebtoken": "^9.0.2",
     "react-chartjs-2": "^5.2.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4"
+    "eslint-config-next": "^14.0.4",
+    "typescript": "5.3.3", 
+    "@types/react": "18.2.45",
+    "@types/node": "20.10.5"
   }
 }
