--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     "test": "node scripts/run-tests.js"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "pg": "^8.11.3",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.1",
-    "date-fns": "^2.30.0",
-    "jsonwebtoken": "^9.0.2",
-    "react-chartjs-2": "^5.2.0",
-    "uuid": "^9.0.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0"
+    "date-fns": "^2.30.0",
+    "jose": "^6.0.10",
+    "jsonwebtoken": "^9.0.2",
+    "next": "^14.1.0",
+    "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
-    "typescript": "5.3.3", 
-    "@types/react": "18.2.45",
-    "@types/node": "20.10.5"
+    "typescript": "5.3.3"
   }
 }
