--- a/package.json
+++ b/package.json
@@ -11,25 +11,44 @@
     "test": "node scripts/run-tests.js"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.488.0",
     "next": "^14.1.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
+    "tw-animate-css": "^1.2.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
+    "postcss": "^8.5.3",
+    "shadcn-ui": "^0.9.5",
+    "tailwindcss": "^4.1.4",
     "typescript": "5.3.3"
   }
 }
